tests/union/union.exp
Error: issue-198.js:9
  9:         return str.toFixed();
                        ^^^^^^^ property `toFixed`. Property not found in
  9:         return str.toFixed();
                    ^^^ String

Error: issue-324.js:8
  8: foostr = barstr;
              ^^^^^^ Bar. This type is incompatible with
  5: var foostr: Foo | string = new Foo();
                 ^^^ Foo

Error: union.js:2
  2: bar(0);
         ^ number. This type is incompatible with the expected param type of
  1: function bar(x: Document | string): void { }
                                ^^^^^^ string

Error: union.js:8
  8:   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
                 ^^^^^^^ D. This type is incompatible with
  8:   var c:C = new E(); // error, since E could be D, and D is not a subtype of C
             ^ C

Error: union.js:9
  9:   function qux(e: E) { } // this annotation is an error: is it C, or is it D?
                       ^ `D` [1] is incompatible with `C` [2].
  References:
    5: class D { }
             ^ [1]: `D`
    4: class C { }
             ^ [2]: `C`

Error: yuge.js:23
 23:     ("": ErrorCode);  // also, error pos omits this line completely
          ^^ Cannot cast `""` to `ErrorCode` because string [1] is incompatible with number enum [2].
  References:
   23:     ("": ErrorCode);  // also, error pos omits this line completely
            ^^ [1]: string
   23:     ("": ErrorCode);  // also, error pos omits this line completely
                ^^^^^^^^^ [2]: number enum


Found 6 errors
